overflow bug
the width I set will overflow, so I fix the bug

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,19 @@ body{
 
 @media (min-width: 340px) { 
 	html{
-		font-size: 55px;
+		font-size: 50px;
+	}
+}
+
+@media (min-width: 768px) {
+  html{
+		font-size: 70px;
+	}
+}
+
+@media (min-width: 992px) {
+  html{
+		font-size: 92px;
 	}
 }
 
@@ -79,15 +91,16 @@ body{
 }
 .logo{
 	position: absolute;
-	width: 1.26rem;
+	width: 6rem;
 	height: 1.41rem;
 	top: 0rem;
 	left: 50%;
 	transform: translate(-50%);
 }
 .logo img{
-	width: 100%;
 	height: 100%;
+	margin-left: 50%;
+    transform: translateX(-50%);
 }
 .word{    
 	position: absolute;
